# JiMP-

lab1/: CMakeLists.txt
lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h
lab1/factorial/: Factorial.cpp
lab1/multiplicationtable/: MultiplicationTable.cpp  MultiplicationTable.h  main.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab1/reversestring/: ReverseString.cpp  ReverseString.h  main.cpp
lab10/academiascheduler/: Scheduler.cpp  Scheduler.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h  main.cpp
lab11/factorymethod/: FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab12/academiasequentialgenerator/: SequentialGenerator.cpp  SequentialGenerator.h
lab12/academiateacherhash/: TeacherHash.cpp  TeacherHash.h  main.cpp
lab12/timerecorder/: TimeRecorder.cpp  TimeRecorder.h
lab12/tree/: Tree.cpp  Tree.h
lab12/treeiterators/: TreeIterators.cpp  TreeIterators.h  main.cpp
lab13/arabicroman/: Arabicroman.cpp  Arabicroman.h  CMakeLists.txt  main.cpp
lab2/array2d/: Array2d.cpp  Array2d.h  CMakeLists.txt  main.cpp
lab2/greatestproduct/: CMakeLists.txt  GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: main.cpp  (+2 more)
lab4/dynamicznatablica/: CMakeLists.txt  DynamicznaTablica.cpp  DynamicznaTablica.h
lab6/worldcounter/: CMakeLists.txt  WorldCounter.cpp  WorldCounter.h  main.cpp
lab8/: CMakeLists.txt
lab8/dvd/: CMakeLists.txt  Exception.cpp  Exception.h  MicroDvdSubtitles.cpp  MicroDvdSubtitles.h  main.cpp
lab8/moviesubtitles/: CMakeLists.txt  MicroDvdSubtitles.cpp  MicroDvdSubtitles.h  main.cpp
(+64 files in other folders)
